--- a/index.html
+++ b/index.html
@@ -1,112 +1,187 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+$(function() {
+    var App = {
+        init: function() {
+            App.attachListeners();
+        },
+        attachListeners: function() {
+            var self = this;
 
-    <title>index</title>
-    <meta name="description" content=""/>
-    <meta name="author" content="Christoph Oberhofer"/>
+            $(".controls input[type=file]").on("change", function(e) {
+                if (e.target.files && e.target.files.length) {
+                    App.decode(URL.createObjectURL(e.target.files[0]));
+                }
+            });
 
-    <meta name="viewport" content="width=device-width; initial-scale=1.0"/>
-    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-</head>
+            $(".controls button").on("click", function(e) {
+                var input = document.querySelector(".controls input[type=file]");
+                if (input.files && input.files.length) {
+                    App.decode(URL.createObjectURL(input.files[0]));
+                }
+            });
 
-<body>
-<header>
-    <div class="headline">
-        <h1>QuaggaJS</h1>
+            $(".controls .reader-config-group").on("change", "input, select", function(e) {
+                e.preventDefault();
+                var $target = $(e.target),
+                    value = $target.attr("type") === "checkbox" ? $target.prop("checked") : $target.val(),
+                    name = $target.attr("name"),
+                    state = self._convertNameToState(name);
 
-        <h2>An advanced barcode-scanner written in JavaScript</h2>
-    </div>
-</header>
-<section id="container" class="container">
-    <h3>Working with file-input</h3>
+                console.log("Value of "+ state + " changed to " + value);
+                self.setState(state, value);
+            });
+        },
+        _accessByPath: function(obj, path, val) {
+            var parts = path.split('.'),
+                depth = parts.length,
+                setter = (typeof val !== "undefined") ? true : false;
 
-    <p>This example let's you select an image from your local filesystem.
-        QuaggaJS then tries to decode the barcode using
-        the preferred method (<strong>Code128</strong> or <strong>EAN</strong>).
-        There is no server interaction needed as the
-        file is simply accessed through the <a
-                href="http://www.w3.org/TR/file-upload/">File API</a>.</p>
+            return parts.reduce(function(o, key, i) {
+                if (setter && (i + 1) === depth) {
+                    o[key] = val;
+                }
+                return key in o ? o[key] : {};
+            }, obj);
+        },
+        _convertNameToState: function(name) {
+            return name.replace("_", ".").split("-").reduce(function(result, value) {
+                return result + value.charAt(0).toUpperCase() + value.substring(1);
+            });
+        },
+        detachListeners: function() {
+            $(".controls input[type=file]").off("change");
+            $(".controls .reader-config-group").off("change", "input, select");
+            $(".controls button").off("click");
+        },
+        decode: function(src) {
+            var self = this,
+                config = $.extend({}, self.state, {src: src});
 
-    <p>This also works great on a wide range of mobile-phones where the camera
-        access through <code>getUserMedia</code> is still very limited.</p>
+            Quagga.decodeSingle(config, function(result) {});
+        },
+        setState: function(path, value) {
+            var self = this;
 
-    <div class="controls">
-        <fieldset class="input-group">
-            <input type="file" accept="image/*" capture="camera"/>
-            <button>Rerun</button>
-        </fieldset>
-        <fieldset class="reader-config-group">
-            <label>
-                <span>Barcode-Type</span>
-                <select name="decoder_readers">
-                    <option value="code_128" selected="selected">Code 128</option>
-                    <option value="code_39">Code 39</option>
-                    <option value="code_39_vin">Code 39 VIN</option>
-                    <option value="ean">EAN</option>
-                    <option value="ean_extended">EAN-extended</option>
-                    <option value="ean_8">EAN-8</option>
-                    <option value="upc">UPC</option>
-                    <option value="upc_e">UPC-E</option>
-                    <option value="codabar">Codabar</option>
-                    <option value="i2of5">Interleaved 2 of 5</option>
-                    <option value="2of5">Standard 2 of 5</option>
-                    <option value="code_93">Code 93</option>
-                </select>
-            </label>
-            <label>
-                <span>Resolution (long side)</span>
-                <select name="input-stream_size">
-                    <option value="320">320px</option>
-                    <option value="640">640px</option>
-                    <option selected="selected" value="800">800px</option>
-                    <option value="1280">1280px</option>
-                    <option value="1600">1600px</option>
-                    <option value="1920">1920px</option>
-                </select>
-            </label>
-            <label>
-                <span>Patch-Size</span>
-                <select name="locator_patch-size">
-                    <option value="x-small">x-small</option>
-                    <option value="small">small</option>
-                    <option value="medium">medium</option>
-                    <option selected="selected" value="large">large</option>
-                    <option value="x-large">x-large</option>
-                </select>
-            </label>
-            <label>
-                <span>Half-Sample</span>
-                <input type="checkbox" name="locator_half-sample" />
-            </label>
-            <label>
-                <span>Single Channel</span>
-                <input type="checkbox" name="input-stream_single-channel" />
-            </label>
-            <label>
-                <span>Workers</span>
-                <select name="numOfWorkers">
-                    <option value="0">0</option>
-                    <option selected="selected" value="1">1</option>
-                </select>
-            </label>
-        </fieldset>
-    </div>
-    <div id="result_strip">
-        <ul class="thumbnails"></ul>
-    </div>
-    <div id="interactive" class="viewport"></div>
-    <div id="debug" class="detection"></div>
-</section>
-<footer>
-    <p>
-        &copy; Copyright by Christoph Oberhofer
-    </p>
-</footer>
-<script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
-<script src="dist/quagga.js" type="text/javascript"></script>
-<script src="file_input.js" type="text/javascript"></script>
-</body>
-</html>
+            if (typeof self._accessByPath(self.inputMapper, path) === "function") {
+                value = self._accessByPath(self.inputMapper, path)(value);
+            }
+
+            self._accessByPath(self.state, path, value);
+
+            console.log(JSON.stringify(self.state));
+            App.detachListeners();
+            App.init();
+        },
+        inputMapper: {
+            inputStream: {
+                size: function(){
+                    return parseInt(800);
+                }
+            },
+            numOfWorkers: function() {
+                return parseInt(1);
+            },
+            decoder: {
+                 readers: function(value) {
+                    if (value === 'ean_extended') {
+                        return [{
+                            format: "ean_reader",
+                            config: {
+                                supplements: [
+                                    'ean_5_reader', 'ean_2_reader'
+                                ]
+                            }
+                        }];
+                    }
+                    return [{
+                        format: value + "_reader",
+                        config: {}
+                    }];
+                }
+            }
+        },
+        state: {
+            inputStream: {
+                size: 800,
+                singleChannel: false
+            },
+            locator: {
+                patchSize: "x-large",
+                halfSample: true
+            },
+            decoder: {
+                readers: [{
+                    format: "upc_reader",
+                    config: {}
+                }]
+            },
+            locate: true,
+            src: null
+        }
+    };
+
+    App.init();
+
+    function calculateRectFromArea(canvas, area) {
+        var canvasWidth = canvas.width,
+            canvasHeight = canvas.height,
+            top = parseInt(area.top)/100,
+            right = parseInt(area.right)/100,
+            bottom = parseInt(area.bottom)/100,
+            left = parseInt(area.left)/100;
+
+        top *= canvasHeight;
+        right = canvasWidth - canvasWidth*right;
+        bottom = canvasHeight - canvasHeight*bottom;
+        left *= canvasWidth;
+
+        return {
+            x: left,
+            y: top,
+            width: right - left,
+            height: bottom - top
+        };
+    }
+
+    Quagga.onProcessed(function(result) {
+		console.log("Code is: " + result.codeResult.result);
+        var drawingCtx = Quagga.canvas.ctx.overlay,
+            drawingCanvas = Quagga.canvas.dom.overlay,
+            area;
+
+        if (result) {
+            if (result.boxes) {
+                drawingCtx.clearRect(0, 0, parseInt(drawingCanvas.getAttribute("width")), parseInt(drawingCanvas.getAttribute("height")));
+                result.boxes.filter(function (box) {
+                    return box !== result.box;
+                }).forEach(function (box) {
+                    Quagga.ImageDebug.drawPath(box, {x: 0, y: 1}, drawingCtx, {color: "green", lineWidth: 2});
+                });
+            }
+
+            if (result.box) {
+                Quagga.ImageDebug.drawPath(result.box, {x: 0, y: 1}, drawingCtx, {color: "#00F", lineWidth: 2});
+            }
+
+            if (result.codeResult && result.codeResult.code) {
+                Quagga.ImageDebug.drawPath(result.line, {x: 'x', y: 'y'}, drawingCtx, {color: 'red', lineWidth: 3});
+            }
+
+            if (App.state.inputStream.area) {
+                area = calculateRectFromArea(drawingCanvas, App.state.inputStream.area);
+                drawingCtx.strokeStyle = "#0F0";
+                drawingCtx.strokeRect(area.x, area.y, area.width, area.height);
+            }
+    }
+    });
+
+    Quagga.onDetected(function(result) {
+        var code = result.codeResult.code,
+            $node,
+            canvas = Quagga.canvas.dom.image;
+
+        $node = $('<li><div class="thumbnail"><div class="imgWrapper"><img /></div><div class="caption"><h4 class="code"></h4></div></div></li>');
+        $node.find("img").attr("src", canvas.toDataURL());
+        $node.find("h4.code").html(code);
+        $("#result_strip ul.thumbnails").prepend($node);
+    });
+});
