--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
     </p>
 </footer>
 <script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
-<script src="../dist/quagga.js" type="text/javascript"></script>
+<script src="dist/quagga.js" type="text/javascript"></script>
 <script src="file_input.js" type="text/javascript"></script>
 </body>
 </html>
